// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemList /> should match snapshot 1`] = `
<div>
  <div
    className="item-list-heading"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="menubar"
  >
    <div
      className="item-list-heading__label"
    >
      Hello World
    </div>
    <Badge
      color="#0085ba"
      count={3}
    />
  </div>
  <Items
    CSL={
      Object {
        "1": Object {
          "id": "1",
          "title": "Test item 1",
        },
        "2": Object {
          "id": "2",
          "title": "Test item 2",
        },
        "3": Object {
          "id": "3",
          "title": "Test item 3",
        },
      }
    }
    id="cited"
    items={
      Array [
        Object {
          "id": "1",
          "title": "Test item 1",
        },
        Object {
          "id": "2",
          "title": "Test item 2",
        },
        Object {
          "id": "3",
          "title": "Test item 3",
        },
      ]
    }
    onClick={[Function]}
    onEditReference={[Function]}
    selectedItems={Array []}
    style={
      Object {
        "maxHeight": "300px",
      }
    }
    withTooltip={true}
  />
  <style
    jsx={true}
  >
    
                        .item-list-heading {
                            display: flex;
                            justify-content: space-between;
                            cursor: pointer;
                            background: #f5f5f5;
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                            padding: 10px;
                            transition: 
                box-shadow .2s cubic-bezier(0.4, 0, 1, 1),
                background-color .2s cubic-bezier(0.4, 0, 0.2, 1),
                color .2s cubic-bezier(0.4, 0, 0.2, 1)
            ;
                            align-items: baseline;
                            user-select: none;
                        }
                        .item-list-heading:hover {
                            background: #ededed;
                        }
                        .item-list-heading:active {
                            background: #e1e1e1;
                        }
                    
  </style>
</div>
`;

exports[`<ItemList /> should match snapshot 2`] = `
<div>
  <div
    className="item-list-heading"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="menubar"
  >
    <div
      className="item-list-heading__label"
    >
      Hello World
    </div>
    <Badge
      color="#0085ba"
      count={3}
    />
  </div>
  <Items
    CSL={
      Object {
        "1": Object {
          "id": "1",
          "title": "Test item 1",
        },
        "2": Object {
          "id": "2",
          "title": "Test item 2",
        },
        "3": Object {
          "id": "3",
          "title": "Test item 3",
        },
      }
    }
    id="cited"
    items={
      Array [
        Object {
          "id": "1",
          "title": "Test item 1",
        },
        Object {
          "id": "2",
          "title": "Test item 2",
        },
        Object {
          "id": "3",
          "title": "Test item 3",
        },
      ]
    }
    onClick={[Function]}
    onEditReference={[Function]}
    selectedItems={
      Array [
        "1",
      ]
    }
    style={
      Object {
        "maxHeight": "300px",
      }
    }
    withTooltip={true}
  />
  <style
    jsx={true}
  >
    
                        .item-list-heading {
                            display: flex;
                            justify-content: space-between;
                            cursor: pointer;
                            background: #f5f5f5;
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                            padding: 10px;
                            transition: 
                box-shadow .2s cubic-bezier(0.4, 0, 1, 1),
                background-color .2s cubic-bezier(0.4, 0, 0.2, 1),
                color .2s cubic-bezier(0.4, 0, 0.2, 1)
            ;
                            align-items: baseline;
                            user-select: none;
                        }
                        .item-list-heading:hover {
                            background: #ededed;
                        }
                        .item-list-heading:active {
                            background: #e1e1e1;
                        }
                    
  </style>
</div>
`;

exports[`<Items /> should match snapshot 1`] = `
<div
  className="abt-items"
  onWheel={[Function]}
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
      "transition": ".2s",
    }
  }
>
  <Card
    CSL={
      Object {
        "id": "1",
        "title": "Test item 1",
      }
    }
    id="1"
    index={1}
    indexOnHover={true}
    isSelected={false}
    onDoubleClick={[Function]}
  />
  <Card
    CSL={
      Object {
        "id": "2",
        "title": "Test item 2",
      }
    }
    id="2"
    index={2}
    indexOnHover={true}
    isSelected={false}
    onDoubleClick={[Function]}
  />
  <Card
    CSL={
      Object {
        "id": "3",
        "title": "Test item 3",
      }
    }
    id="3"
    index={3}
    indexOnHover={true}
    isSelected={false}
    onDoubleClick={[Function]}
  />
</div>
`;

exports[`<Items /> should match snapshot 2`] = `
<div
  className="abt-items"
  onWheel={[Function]}
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
      "transition": ".2s",
    }
  }
>
  <Card
    CSL={
      Object {
        "id": "1",
        "title": "Test item 1",
      }
    }
    id="1"
    index={1}
    indexOnHover={true}
    isSelected={true}
    onDoubleClick={[Function]}
  />
  <Card
    CSL={
      Object {
        "id": "2",
        "title": "Test item 2",
      }
    }
    id="2"
    index={2}
    indexOnHover={true}
    isSelected={false}
    onDoubleClick={[Function]}
  />
  <Card
    CSL={
      Object {
        "id": "3",
        "title": "Test item 3",
      }
    }
    id="3"
    index={3}
    indexOnHover={true}
    isSelected={false}
    onDoubleClick={[Function]}
  />
</div>
`;
